[package]
name = "ca_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0.199", features = ["derive"] }
ssh-key = { version = "0.6.6", features = ["crypto"] }
rocket_cors = "0.6.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.127"
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v4"] }
